WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284502
REGRESSION(
265294@main
): [GTK][WPE] WTR is unable to find the fonts.conf file if the top-level compile-time and run-time directories are different
https://bugs.webkit.org/show_bug.cgi?id=284502
Summary
REGRESSION(265294@main): [GTK][WPE] WTR is unable to find the fonts.conf file...
Carlos Alberto Lopez Perez
Reported
2024-12-11 19:06:58 PST
This has been detected on some downstream bots that I'm testing were we don't use flatpak. It happens that we hardcode at build-time the path to the webkit top level dir as a compiler definition (TOP_LEVEL_DIR) and then we use that to find the fonts.conf file at TOP_LEVEL_DIR/Tools/WebKitTestRunner/glib/fonts/fonts.conf The problem happens when we use that compilation on another checkout of webkit that has a different path. Example: bot1 -> Builds WebKit at /home/bot1/WebKit and hardcodes TOP_LEVEL_DIR as /home/bot1/WebKit bot2 -> Downloads built-product from bot1 at /home/bot2/WebKit and tries to run layout tests. Then it will try to access font.conf file at /home/bot1/WebKit/Tools/WebKitTestRunner/glib/fonts/fonts.conf but that path is invalid on this bot. This was working before
265294@main
because we were using relative paths. It is fine using absolute path, but we have to detect the path at run-time rather than rely only on the path that was used at compile-time.
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Alberto Lopez Perez
Comment 1
2024-12-11 19:08:43 PST
With flatpak this is not an issue because inside the flatpak env everyone gets the same working dir at /app
Carlos Alberto Lopez Perez
Comment 2
2024-12-11 19:30:10 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37814
EWS
Comment 3
2024-12-12 05:10:09 PST
Committed
287735@main
(d8bd0466a815): <
https://commits.webkit.org/287735@main
> Reviewed commits have been landed. Closing PR #37814 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug