Source/WTF/wtf/glib/FileSystemGlib.cpp
@@ -118,5 +118,21 @@ String userDataDirectory()
     return stringFromFileSystemRepresentation(g_get_user_data_dir());
 }
 
+#if ENABLE(DEVELOPER_MODE)
+CString webkitTopLevelDirectory()
+{
+    if (const char* topLevelDirectory = g_getenv("WEBKIT_TOP_LEVEL")) {
+        if (g_file_test(topLevelDirectory, G_FILE_TEST_IS_DIR))
+            return topLevelDirectory;
+    }
+    // The tooling to run tests should provide the above environment variable with
+    // the right value, but if that was not the case, then do an attempt to guess
+    // it assuming that we were built in the standard WebKitBuild subdirectory.
+    GUniquePtr<char*> parentPath(g_strsplit(currentExecutablePath().data(), "/WebKitBuild", -1));
+    GUniquePtr<char> absoluteTopLevelPath(realpath(parentPath.get()[0], nullptr));
+    return absoluteTopLevelPath.get();
+}
+#endif
+
 } // namespace FileSystemImpl
 } // namespace WTF
